# napkinscript

./: .gitignore  .travis.yml  Lang.ml  Makefile  Napkinscript.cmi  Napkinscript.cmo  Napkinscript.ml  README.md  esy.json  jest.config.js  mod.ns  napkinscript.opam  package-lock.json  package.json  test2.ns  valparaiso.opam
benchmarks/: NapkinscriptNapkin.ml  NapkinscriptOcaml.ml  RedBlackTreeNapkin.ml
lib/: napkinscript
tests/: runner.js
tests/parsing/errors/expressions/: block.js  record.js
tests/printer/comments/: blockExpr.ns  expr.ns  multiline.ns  pattern.ns  trailingComments.ns  typeDefinition.js  valueBindings.ns
tests/printer/expr/: apply.js  array.js  assert.js  binary.js  block.js  braced.js  callback.js  constant.js  constraint.js  constructor.js  extension.js  field.js  firstClassModule.js  for.js  fun.js  ident.js  if.js  jsObjectAccess.js  jsx.js  lazy.js  let.js  list.js  newtype.js  record.js  sequence.js  setfield.js  switch.js  templateLiteral.js  ternary.js  try.js  tuple.js  unary.js  while.js
tests/printer/modExpr/: apply.js  functor.js
tests/printer/modType/: ident.js
tests/printer/other/: StaticReactTypes.js  case.js  char.js  string.js
tests/printer/pattern/: constant.ns  construct.ns  list.ns  or.ns  record.ns  tuple.ns
tests/printer/structure/: external.js  include.js  moduleTypeDeclaration.js  valueBinding.js
tests/printer/typeDef/: abstract.js  record.js  variant.js
tests/printer/typexpr/: any.js  arrow.js  bsObject.js  extension.js  firstClassModule.js  tuple.js  typeConstr.js  var.js
(+108 files in other folders)
