opam-version: "2.0"
name: "napkinscript"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Iwan <valcke.maxim@gmail.com>"
authors: "Iwan <valcke.maxim@gmail.com>"
license: "MIT"
homepage: "https://github.com/iwankaramazow/napkinscript"
bug-reports: "https://github.com/iwankaramazow/napkinscript/issues"
depends: ["ocaml" "ocamlfind" "ocaml-migrate-parsetree"]
build: [
  [make "build-native"]
]
install: [make "build-native"]
