opam-version: "2.0"
name: "valparaiso"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Iwan <valcke.maxim@gmail.com>"
authors: "Iwan <valcke.maxim@gmail.com>"
license: "MIT"
homepage: "https://github.com/iwankaramazow/valparaiso"
bug-reports: "https://github.com/iwankaramazow/valparaiso/issues"
depends: [ "ocaml" ]
build: [
  [make "build"]
]
install: [make "build"]
